--- a/apps/shop/src/app/shared/header/header.component.html
+++ b/apps/shop/src/app/shared/header/header.component.html
@@ -36,22 +36,26 @@
           </svg>
         </button>
         <div class="text-xl font-bold flex items-center lg:ml-2.5">
-          <img
-            src="https://demo.themesberg.com/windster/images/logo.svg"
-            class="h-6 mr-2"
-            alt="Windster Logo"
-          />
-          <span class="self-center whitespace-nowrap">OneShop Store</span>
+          <a class="flex" routerLink="/">
+            <img
+              src="https://demo.themesberg.com/windster/images/logo.svg"
+              class="h-6 mr-2"
+              alt="Windster Logo"
+            />
+            <span class="self-center whitespace-nowrap">OneShop Store</span>
+          </a>
         </div>
       </div>
       <div class="flex items-center">
-        <i
-          class="pi pi-shopping-cart mr-4 p-text-secondary"
-          pBadge
-          style="font-size: 1.5rem"
-          [value]="cartCount"
-          severity="danger"
-        ></i>
+        <a routerLink="/mycart">
+          <i
+            class="pi pi-shopping-cart mr-4 p-text-secondary"
+            pBadge
+            style="font-size: 1.5rem"
+            [value]="cartCount"
+            severity="danger"
+          ></i>
+        </a>
       </div>
     </div>
   </div>
