Fixed Number Input Style Classes

--- a/apps/admin/src/app/components/products/products-form/products-form.component.html
+++ b/apps/admin/src/app/components/products/products-form/products-form.component.html
@@ -123,7 +123,8 @@
             inputId="stacked"
             mode="currency"
             currency="USD"
-            styleClass=""
+            decrementButtonClass="bg-indigo-600"
+            incrementButtonClass="bg-indigo-600"
           ></p-inputNumber>
 
           <small
