--- a/apps/shop/src/app/pages/cart/cart.component.html
+++ b/apps/shop/src/app/pages/cart/cart.component.html
@@ -24,22 +24,17 @@
           class="mt-4 flex justify-between sm:space-y-6 sm:mt-0 sm:block sm:space-x-6"
         >
           <div class="flex items-center border-gray-100">
-            <span
-              class="cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-blue-500 hover:text-blue-50"
-            >
-              -
-            </span>
-            <input
-              class="h-8 w-8 border bg-white text-center text-xs outline-none"
-              type="number"
-              value="2"
-              min="1"
-            />
-            <span
-              class="cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-blue-500 hover:text-blue-50"
-            >
-              +
-            </span>
+            <p-inputNumber
+              mode="decimal"
+              [showButtons]="true"
+              inputId="minmax-buttons"
+              [min]="1"
+              [max]="100"
+              styleClass="h-9"
+              inputStyleClass="w-16"
+              decrementButtonClass="bg-indigo-600"
+              incrementButtonClass="bg-indigo-600"
+            ></p-inputNumber>
           </div>
           <div class="flex items-center space-x-4">
             <p class="text-sm">259.000 ₭</p>
