--- a/apps/shop/src/app/components/cart/total-orders/total-orders.component.html
+++ b/apps/shop/src/app/components/cart/total-orders/total-orders.component.html
@@ -18,6 +18,7 @@
     </div>
   </div>
   <button
+    routerLink="/checkout"
     class="mt-6 w-full rounded-md bg-blue-500 py-3 font-medium text-blue-50 hover:bg-blue-600"
   >
     Check out
