--- a/apps/shop/src/app/pages/checkout/checkout.component.html
+++ b/apps/shop/src/app/pages/checkout/checkout.component.html
@@ -33,7 +33,7 @@
     <p class="text-gray-400">
       Complete your order by providing your payment details.
     </p>
-    <div class="">
+    <form [formGroup]="form" class="">
       <label for="email" class="mt-4 mb-2 block text-sm font-medium"
         >Email</label
       >
@@ -151,6 +151,7 @@
       <div class="flex flex-col sm:flex-row">
         <div class="relative flex-shrink-0 sm:w-7/12">
           <input
+            formControlName="shippingAddress"
             pInputText
             type="text"
             id="billing-address"
@@ -189,8 +190,9 @@
           {{ total | currency }}
         </p>
       </div>
-    </div>
+    </form>
     <button
+      (click)="submitOrder('63e07f0612dc0cc95e8301fc')"
       class="mt-4 mb-8 w-full rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
     >
       Place Order
