--- a/apps/shop/src/app/shared/header/header.component.html
+++ b/apps/shop/src/app/shared/header/header.component.html
@@ -46,7 +46,7 @@
           </a>
         </div>
       </div>
-      <div class="flex items-center">
+      <div class="flex items-center gap-3">
         <a routerLink="/mycart">
           <i
             class="pi pi-shopping-cart mr-4 p-text-secondary"
@@ -56,6 +56,54 @@
             severity="danger"
           ></i>
         </a>
+        <button
+          type="button"
+          id="user-menu-button"
+          aria-expanded="false"
+          data-dropdown-toggle="dropdown"
+          (click)="triggerOpenAccount()"
+        >
+          <span class="sr-only">Open user menu</span>
+          <i class="pi pi-user" style="font-size: 1.4rem"></i>
+        </button>
+      </div>
+
+      <!-- Dropdown menu -->
+      <div
+        [ngClass]="{ hidden: openAccount }"
+        class="absolute top-11 right-5 z-10 my-4 w-56 text-base list-none bg-white rounded shadow-md border-1"
+        id="dropdown"
+      >
+        <div class="py-3 px-4">
+          <span class="block text-sm font-semibold text-gray-900"
+            >Neil sims</span
+          >
+          <span class="block text-sm font-light text-gray-500 truncate"
+            >name@flowbite.com</span
+          >
+        </div>
+        <ul
+          class="py-1 font-light text-gray-500 dark:text-gray-400"
+          aria-labelledby="dropdown"
+        >
+          <li>
+            <a href="#" class="block py-2 px-4 text-sm">My profile</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-4 text-sm">Account settings</a>
+          </li>
+        </ul>
+
+        <ul class="py-1 font-light" aria-labelledby="dropdown">
+          <li>
+            <a
+              (click)="logout()"
+              class="block py-2 px-4 text-sm hover:bg-gray-100"
+            >
+              Sign out
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
