--- a/apps/shop/src/app/pages/checkout/checkout.component.html
+++ b/apps/shop/src/app/pages/checkout/checkout.component.html
@@ -39,11 +39,11 @@
       >
       <div class="relative">
         <input
-          formControlName="country"
+          formControlName="email"
           type="text"
           pInputText
           id="email"
-          name="country"
+          name="email"
           class="w-full rounded-md border border-gray-200 px-4 py-3 pl-11 text-sm shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
         />
 
@@ -71,12 +71,12 @@
       >
       <div class="relative">
         <input
+          formControlName="name"
           pInputText
           type="text"
-          id="card-holder"
-          name="card-holder"
+          id="name"
+          name="name"
           class="w-full rounded-md border border-gray-200 px-4 py-3 pl-11 text-sm uppercase shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
-          placeholder="Your full name here"
         />
         <div
           class="pointer-events-none absolute inset-y-0 left-0 inline-flex items-center px-3"
@@ -108,7 +108,7 @@
             id="card-no"
             name="card-no"
             class="w-full rounded-md border border-gray-200 px-2 py-3 pl-11 text-sm shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
-            placeholder="xxxx-xxxx-xxxx-xxxx"
+            value="4242 4242 4242 4242"
           />
           <div
             class="pointer-events-none absolute inset-y-0 left-0 inline-flex items-center px-3"
@@ -135,7 +135,7 @@
           type="text"
           name="credit-expiry"
           class="w-full rounded-md border border-gray-200 px-2 py-3 text-sm shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
-          placeholder="MM/YY"
+          value="MM/YY"
         />
         <input
           pInputText
@@ -148,28 +148,15 @@
       <label for="billing-address" class="mt-4 mb-2 block text-sm font-medium"
         >Billing Address</label
       >
-      <div class="flex flex-col sm:flex-row">
-        <div class="relative flex-shrink-0 sm:w-7/12">
-          <input
-            formControlName="shippingAddress"
-            pInputText
-            type="text"
-            id="billing-address"
-            name="billing-address"
-            class="w-full rounded-md border border-gray-200 px-4 py-3 text-sm shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
-            placeholder="Street Address"
-          />
-          <div
-            class="pointer-events-none absolute inset-y-0 left-0 inline-flex items-center px-3"
-          ></div>
-        </div>
-
+      <div class="relative flex-shrink-0">
         <input
+          formControlName="shippingAddress"
           pInputText
           type="text"
-          name="billing-zip"
-          class="flex-shrink-0 rounded-md border border-gray-200 px-4 py-3 text-sm shadow-sm outline-none sm:w-1/6 focus:z-10 focus:border-blue-500 focus:ring-blue-500"
-          placeholder="ZIP"
+          id="billing-address"
+          name="billing-address"
+          class="w-full rounded-md border border-gray-200 px-4 py-3 text-sm shadow-sm outline-none focus:z-10 focus:border-blue-500 focus:ring-blue-500"
+          placeholder="Street Address"
         />
       </div>
 
